# kagesoto

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.md  README.md  benchmark.sh  coverage.json  test.sh
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  basic_operations_benchmark.cpp  basic_systems_benchmark.cpp  benchmark_common.hpp  entities_benchmark.cpp  extended_benchmark.cpp  project_benchmark.cpp  stress_benchmark.cpp  trace_benchmark.cpp
cmake/: AshiatoConfig.cmake.in  ashiato_coverage_report.cmake  ecsConfig.cmake.in  ecs_coverage_report.cmake
examples/: CMakeLists.txt  balls_3d.cpp  main.cpp
include/ashiato/: ashiato.hpp  bit_buffer.hpp  debug_server.hpp
include/ecs/: bit_buffer.hpp  debug_server.hpp  ecs.hpp  export.hpp
include/simplelib/: export.hpp  simplelib.hpp
scripts/bench/: build.sh  compare.sh  gprof.sh  profile.sh  run.sh
scripts/ci/: build_benchmark_pages.py  run_benchmarks.py
src/: ashiato.cpp  ashiato_bit_buffer.test.cpp  ashiato_debug_server.test.cpp  ashiato_groups.test.cpp  ashiato_job_callbacks.test.cpp  ashiato_job_graph.test.cpp  ashiato_job_threading.test.cpp  ashiato_jobs_basic.test.cpp  ashiato_metadata.test.cpp  ashiato_registry.test.cpp  ashiato_snapshot.test.cpp  ashiato_storage.test.cpp  ashiato_test_support.hpp  ashiato_views_basic.test.cpp  ashiato_views_iteration.test.cpp  bplus_tree.hpp  bplus_tree.test.cpp  component_index.hpp  debug_server.cpp  ecs.cpp  ecs.test.cpp  ecs_bit_buffer.test.cpp  ecs_debug_server.test.cpp  ecs_groups.test.cpp  ecs_job_callbacks.test.cpp  ecs_job_graph.test.cpp  ecs_job_threading.test.cpp  ecs_jobs_basic.test.cpp  ecs_metadata.test.cpp  ecs_registry.test.cpp  ecs_snapshot.test.cpp  ecs_storage.test.cpp  ecs_test_support.hpp  ecs_views_basic.test.cpp  ecs_views_iteration.test.cpp  group.test.cpp  groups.cpp  jobs.cpp  paged_sparse_array.hpp  profiler.hpp  (+16 more)
tests/: simplelib_tests.cpp
web/debugger/: index.html  package.json
web/debugger/src/: App.tsx  api.test.ts  api.ts  state.test.ts  state.ts  styles.css  types.ts
